recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:4: error: not found: type Dooble
def Krab(levels:Int , length:Dooble){
                             ^